增加下列命令：clear，cat, cd 支持文章跳转与返回 支持上下键查看命令历史记录 调整了部分样式

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -1,5 +1,16 @@
 @require './code.styl'
 
+body {
+  font-family: Monaco, Cutive Mono, Courier New, Consolas, monospace;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 25px;
+  color: #fff;
+  background-color: #131416;
+  padding: 5px;
+  margin: 0;
+}
+
 h1, h2, h3, h4 {
   font-weight: 400;
 }
